# ksh

./: .editorconfig  .gitignore  Makefile  charclass.h  compile_flags.txt  configure.ac
.github/workflows/: ci.yml
build-aux/: gen-version
src/: Makefile.am  c_sh.c  c_test.h  charclass.h  config.h  edit.h  eval.c  exec.c  expand.h  history.c  jobs.c  lex.c  lex.h  mail.c  main.c  misc.c  sh.h  shf.h  table.h  trap.c  tree.h  tty.h  var.c  vi.c
src/compat/: compat.h  siglist.c  signame.c  strlcat.c  strlcpy.c  strtonum.c  time.h  unvis.c  vis.c  vis.h
