bin_PROGRAMS = sh
sh_SOURCES = alloc.c c_ksh.c c_sh.c c_test.c c_ulimit.c edit.c emacs.c \
                eval.c exec.c expr.c history.c io.c jobs.c lex.c mail.c \
                main.c misc.c path.c shf.c syn.c table.c trap.c tree.c \
                tty.c var.c version.c vi.c emacs.c sh.h \
				compat/siglist.c compat/signame.c compat/strlcat.c \
				compat/strlcpy.c compat/strtonum.c compat/vis.c compat/unvis.c

man_MANS    = sh.1
EXTRA_DIST = $(man_MANS)
